--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  transition: .5s all;
+  transition: 2s all;
 }
 div {
   cursor: pointer;
