--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: monospace;
 }
 
-.box-1{
+.box-1 {
   width: 100%;
   height: 100vh;
   background-color: aliceblue;
@@ -14,7 +14,7 @@
   align-items: center;
 }
 
-.seccion-1{
+.seccion-1 {
   width: 35%;
   height: 50vh;
   text-align: center;
@@ -23,35 +23,35 @@
   margin: 1.5%;
 }
 
-.seccion-1 img{
+.seccion-1 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.seccion-1 .hover{
+.seccion-1 .hover {
   width: 0%;
   height: 50vh;
   background-color: rgba(82, 82, 82, 0.514);
   position: absolute;
   top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
-  transition: 2s all;
+  transition: .5s all;
 }
+
 div {
   cursor: pointer;
 }
 
-.hover h1{
+.hover h1 {
   color: aliceblue;
   text-shadow: 1px 1px 1px black;
-  font-size: 2.5em;
-  text-transform: uppercase;
+  font-size: 2.2em;
+  translate: 0 260px;
+  margin-bottom: 15px;
 }
 
-.seccion-1:hover .hover{
+.seccion-1:hover .hover {
   width: 100%;
 }
+
